# ObjectViewer

./: CMakeLists.txt  Makefile  README.md
src/: main.cc
src/Command/: Command.cc  Command.h
src/Controller/: Controller.cc  Controller.h
src/FileReader/: BaseFileReader.h  ObjectFileReader.cc  ObjectFilereader.h
src/MediaSaver/: MediaSaver.cc  MediaSaver.h
src/Object/: Object.cc  Object.h
src/ObjectViewer/: ObjectViewer.cc  ObjectViewer.h
src/Settings/: Settings.cc  Settings.h
src/Transformer/: Transformer.cc  Transformer.h
src/View/: glwidget.cc  glwidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui
tests/: unit_tests.cc
